--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<div class="jumbotron masthead">
 			<div class="container">
-				<h1 style="color: white;">ASAC</h1>
+				<h1 style="color: white;">"asac"</h1>
 				<p><strong>A</strong>nurag <strong>S</strong>inha <strong>A</strong>rchitectural <strong>C</strong>onsultancy</p>
 
 				<p><a href="/">+91-9427492938</a> / <a href="mailto:anurag@anuragsinha.in">anurag@anuragsinha.in</a></p>
