--- a/index.html
+++ b/index.html
@@ -1,55 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>"asac"</title>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>"asac"</title>
+    <link href="style.css" rel="stylesheet" />
+</head>
+<body>
+    <div id="header">
+      <a href="http://anuragsinha.in">anuragsinha.in</a>
+    </div>
 
-		<meta name="author" content="Name Lastname">
+    <div id="main">
 
-		<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-		<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+      <div id="logo">"asac"</div>
 
-		<!-- Le styles -->
-		<link href="/assets/themes/twitter/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="/assets/themes/twitter/bootstrap/css/docs.css" rel="stylesheet">
-		<link href="/assets/themes/twitter/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+      <div id="description">
+          <p style="letter-spacing: 10.5px;">ARCHITECTURE</p>
+          <hr/>
+          <p style="letter-spacing: 17.5px;">INTERIORS</p>
+          <hr/>
+          <p style="letter-spacing: 33px;">DESIGN</p>
+          <hr/>
+      </div>
+    </div>
 
-		<!-- Le fav and touch icons -->
-		<!-- Update these with your own images
-		<link rel="shortcut icon" href="images/favicon.ico">
-		<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-		-->
-	</head>
+    <div id="footer">
+        <div id="phone">
+            Phone: +91 9427492938
+        </div>
 
-
-	<body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
-
-		<div class="jumbotron masthead">
-			<div class="container">
-				<h1 style="color: white;">"asac"</h1>
-				<p><strong>A</strong>nurag <strong>S</strong>inha <strong>A</strong>rchitectural <strong>C</strong>onsultancy</p>
-
-				<p><a href="/">+91-9427492938</a> / <a href="mailto:anurag@anuragsinha.in">anurag@anuragsinha.in</a></p>
-				<p><a href="htttp://www.anuragsinha.in">anuragsinha.in</a> / <a href="http://www.asacindia.blogspot.in">asacindia.blogspot.in</a>
-			</div>
-		</div>
-
-
-		<!-- Footer
-		================================================== -->
-		<footer class="footer">
-		<div class="container">
-			<p><a href="http://jigarpatel.in" target="_blank">Designed and built by JAP</a></p>
-		</div>
-		</footer>
-
-
-
-
-	</body>
+        <div id="contact">
+            <p id="instagram"><img src="instagram-logo.png"></img> <a
+                                   href="https://instagram.com/asac_design">asac_design</a></p>
+            <p id="email"><img src="mail.png"></img> <a
+                href="mailto:anurag@anuragsinha.in">anurag@anuragsinha.in</a></p>
+        </div>
+    </div>
+</body>
 </html>
-
