Use phone icon instead of phone

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
 
     <div id="footer">
-        <div id="phone">
-            Phone: +91 9427492938
-        </div>
 
         <div id="contact">
+        <p id="phone">
+            <img src="phone.png"></img> +91 9427492938
+        </p>
             <p id="instagram"><img src="instagram-logo.png"></img> <a
                                    href="https://instagram.com/asac_design">asac_design</a></p>
             <p id="email"><img src="mail.png"></img> <a
