--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="phone.png"></img> +91 9427492938
         </p>
             <p id="instagram"><img src="instagram-logo.png"></img> <a
-                                   href="https://instagram.com/asac_anurag">asac_anurag</a></p>
+                                   href="https://instagram.com/asac_design">asac_design</a></p>
             <p id="email"><img src="mail.png"></img> <a
                 href="mailto:anurag@anuragsinha.in">anurag@anuragsinha.in</a></p>
         </div>
